--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -14,3 +14,8 @@ a {
 * {
   box-sizing: border-box;
 }
+ */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
