- jest configuration - touch-action fix for grabber for ingredient ordering - bugfix: drag with page scroll - ui design improvements overall - bugfix: save form second click - bugfix: loading overlay - chakra updated to @latest 2.2 for focus-visible fix - bugfix: chakra custom font vertical align problems - custom fonts added to theme from google fonts - responsive design improvements for large displays - photo is now fully responsive - mongodb description data api feature - description is now fully editable

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100;200;300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300;400;500;600;700;800&display=swap');
-
-body {
-  font-family: Quicksand;
-}
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap');
